--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "front-end-inspiration-board",
   "version": "0.1.0",
+  "homepage": "https://lattei.github.io/front-end-inspiration-board",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,10 +14,13 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0",
+    "parcel-bundler": "1.12.5"
   }
 }
